--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,6 +3,6 @@ redis_exporter_url: "https://github.com/oliver006/redis_exporter/releases/downlo
 
 redis_exporter_log_path: "/var/log/redis-exporter.log"
 
-redis_exporter_addrs: "{% for i in redis_instances %}${HOSTNAME}:{{ i.port }}{% if not loop.last %},{% endif %}{% endfor %}"
-redis_exporter_aliases: "{% for i in redis_instances %}{{ i.port }}{% if not loop.last %},{% endif %}{% endfor %}"
+redis_exporter_addrs: "localhost:6379"
+redis_exporter_aliases: "6379"
 redis_exporter_args: "-redis.addr {{ redis_exporter_addrs }} -redis.alias {{ redis_exporter_aliases }}"
